--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -29,7 +29,8 @@ th      { background: #CCCCCC }
 .primary { font-weight: bold }
 .secondary { font-style: italic }
 .deleted { text-decoration: line-through }
-.deleted-section { border-bottom: dashed 1px }
+.deleted-section::before { content: '{{'; }
+.deleted-section::after { content: '}}'; }
 
 li.c-bullet { list-style-type:none; text-indent: -1em }
 
@@ -37,5 +38,3 @@ table.nav-table    { border: none; width: 100% }
 table.nav-table td { border: none }
 
 hr { border: none; height: 1px; color: #000; background-color: #000; }
-
-.sf-logo { position: absolute; top: 18px; right: 18px; }
