--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -16,13 +16,16 @@
     font-family: Tengwar_Eldamar_Glaemscrafu;
     font-size: 100%;
 }
-body    { font-family: 'GentiumPlusW', 'Times New Roman', san-serif; line-height: 130%; }
+body    { font-family: 'Times New Roman', 'GentiumPlusW', san-serif; line-height: 130%; }
 
 a:link  { text-decoration: none }
 a:hover { text-decoration: underline }
 table   { border: solid 1px black; border-collapse: collapse }
 td, th  { border: solid 1px black; padding: 0.2em; vertical-align: top }
 th      { background: #CCCCCC }
+
+dd.see-instead { list-style: none; margin-left: 1em; }
+dd.see-instead::before { content: '→ '; }
 
 .entry-section { font-weight: bold; text-align : center; text-decoration: underline }
 
@@ -36,5 +39,8 @@ li.c-bullet { list-style-type:none; text-indent: -1em }
 
 table.nav-table    { border: none; width: 100% }
 table.nav-table td { border: none }
+
+table.neo-nav-table    { display: none; border: none; width: 100% }
+table.neo-nav-table td { border: none }
 
 hr { border: none; height: 1px; color: #000; background-color: #000; }
