--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: GentiumPlusW;
   src: url(GentiumPlus-R.woff);
@@ -7,6 +8,7 @@
   font-style: italic;
   src: url(GentiumPlus-I.woff);
 }
+*/
 @font-face {
     font-family: Tengwar_Eldamar_Glaemscrafu;
     src: url('tengwar-eldamar-glaemscrafu.woff') format('woff');
@@ -17,13 +19,25 @@
     font-size: 100%;
 }
 
-body    { font-family: 'Times New Roman', 'GentiumPlusW', san-serif; }
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+/* body    { font-family: Times, "Times New Roman", serif; } */
+/* body    { font-family: Arial, Helvetica, sans-serif; } */
+
+body    { font-family: Times, "Times New Roman", serif; }
 
 a:link  { text-decoration: none }
 a:hover { text-decoration: underline }
 table   { border: solid 1px black; border-collapse: collapse }
 td, th  { border: solid 1px black; padding: 0.2em; vertical-align: top }
 th      { background: #CCCCCC }
+
+h1 { font-size: 150% }
+h2 { font-size: 125% }
+h3 { font-size: 100% }
 
 ul { padding-left: 1.5em; }
 blockquote { margin-left: 1.5em; margin-right: 0em; }
