--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -1,4 +1,3 @@
-/*
 @font-face {
   font-family: GentiumPlusW;
   src: url(GentiumPlus-R.woff);
@@ -8,12 +7,17 @@
   font-style: italic;
   src: url(GentiumPlus-I.woff);
 }
-*/
+/* Use "Times" for emoji characters. */
+@font-face {
+    font-family: GentiumPlusW;
+    src: local('Times');
+    unicode-range: U+1F600-U+1FFFF;
+}
+
 @font-face {
     font-family: Tengwar_Eldamar_Glaemscrafu;
     src: url('tengwar-eldamar-glaemscrafu.woff') format('woff');
 }
-
 .tengwar {
     font-family: Tengwar_Eldamar_Glaemscrafu;
     font-size: 100%;
@@ -26,13 +30,12 @@ html {
 
 /* body    { font-family: Times, "Times New Roman", serif; } */
 /* body    { font-family: Arial, Helvetica, sans-serif; } */
-
-body    { font-family: Times, "Times New Roman", serif; }
+body    { font-family: 'GentiumPlusW', Times, 'Times New Roman', san-serif; line-height: 133%; }
 
 a:link  { text-decoration: none }
 a:hover { text-decoration: underline }
 table   { border: solid 1px black; border-collapse: collapse }
-td, th  { border: solid 1px black; padding: 0.2em; vertical-align: top }
+td, th  { border: solid 1px black; padding: 0.2em; vertical-align: top; line-height: 133%; }
 th      { background: #CCCCCC }
 
 h1 { font-size: 150% }
@@ -46,6 +49,8 @@ dt { list-style: none; text-indent: -1.5em; margin-left: 1.5em; }
 dt::first-line { list-style: none; margin-left: 2em; }
 dd.see-instead { list-style: none; text-indent: -1.25em; margin-left: 2.75em; }
 dd.see-instead::before { content: '→ '; }
+dd.see-from { list-style: none; text-indent: -1.25em; margin-left: 2.75em; }
+dd.see-from::before { content: '← '; }
 
 .entry-section { font-weight: bold; text-align : center; text-decoration: underline }
 
