--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -43,7 +43,7 @@ h2 { font-size: 125% }
 h3 { font-size: 100% }
 
 ul { padding-left: 1.5em; }
-blockquote { margin-left: 1.5em; margin-right: 0em; }
+blockquote { margin-left: 0.75em; margin-right: 0em; padding-left: 0.50em; border-left: 0.25em solid #ccc; }
 
 dt { list-style: none; text-indent: -1.5em; margin-left: 1.5em; }
 dt::first-line { list-style: none; margin-left: 2em; }
